[gd_scene load_steps=15 format=2]

[ext_resource path="res://LevelData/Level07.tres" type="Resource" id=1]
[ext_resource path="res://UI/GameWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/SoundAndMusicToggle.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameState/GameState.tscn" type="PackedScene" id=6]
[ext_resource path="res://ProgressTracker/ProgressTracker.tscn" type="PackedScene" id=7]
[ext_resource path="res://BossDialogue/DialogueWindow.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://CameraPanner/CameraPanner.tscn" type="PackedScene" id=10]
[ext_resource path="res://Hero/Hero.tscn" type="PackedScene" id=11]
[ext_resource path="res://Interactables/Health.tscn" type="PackedScene" id=12]
[ext_resource path="res://Game.gd" type="Script" id=13]
[ext_resource path="res://GameState/GamePauser.gd" type="Script" id=14]

[node name="Level7" type="Node2D"]
script = ExtResource( 13 )
level_data = ExtResource( 1 )

[node name="GameState" parent="." instance=ExtResource( 6 )]

[node name="ProgressTracker" parent="." instance=ExtResource( 7 )]

[node name="CameraPanner" parent="." instance=ExtResource( 10 )]
zoom_step = 0.25
zoom_speed = 25.0

[node name="Level" parent="." instance=ExtResource( 4 )]

[node name="Floor" parent="Level/TileSelector/LevelNavigation" index="0"]
tile_data = PoolIntArray( 65547, 19, 0, 131080, 4, 0, 131081, 7, 0, 131082, 7, 0, 131083, 17, 0, 196616, 8, 0, 262152, 10, 0, 262153, 5, 0, 262154, 6, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 458752, 1, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 524288, 0, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 589824, 0, 0, 589832, 15, 0, 589833, 11, 0, 589834, 11, 0, 589835, 6, 0, 655360, 0, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 786440, 4, 0, 786441, 16, 0, 786442, 11, 0, 786443, 12, 0, 851976, 10, 0, 851977, 7, 0, 851978, 16, 0, 851979, 17, 0, 917512, 8, 0, 983048, 14, 0 )

[node name="Walls" parent="Level/TileSelector/LevelNavigation" index="1"]
tile_data = PoolIntArray( 10, 21, 0, 11, 21, 0, 12, 21, 0, 65543, 21, 0, 65544, 21, 0, 65545, 21, 0, 65546, 22, 0, 65548, 20, 0, 131079, 22, 0, 131084, 20, 0, 196615, 22, 0, 196617, 20, 0, 196618, 21, 0, 196619, 21, 0, 196620, 21, 0, 262151, 22, 0, 262155, 20, 0, 327687, 22, 0, 327691, 20, 0, 393223, 22, 0, 393227, 20, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458759, 22, 0, 458763, 20, 0, 524288, 0, 0, 524289, 1, 0, 524290, 1, 0, 524295, 22, 0, 524299, 20, 0, 524300, 21, 0, 589824, 0, 0, 589825, 3, 0, 589826, 3, 0, 589831, 22, 0, 589836, 20, 0, 655360, 0, 0, 655361, 1, 0, 655362, 1, 0, 655367, 21, 0, 655368, 22, 0, 655372, 20, 0, 720903, 21, 0, 720904, 22, 0, 720908, 20, 0, 786439, 22, 0, 786444, 20, 0, 851975, 22, 0, 851980, 20, 0, 917511, 22, 0, 917513, 20, 0, 917514, 21, 0, 917515, 21, 0, 917516, 21, 0, 983047, 22, 0, 983049, 20, 0, 1048583, 21, 0, 1048584, 21, 0, 1048585, 21, 0 )

[node name="BuildSlots" parent="Level/TileSelector/LevelNavigation" index="3"]
tile_data = PoolIntArray( 327688, 0, 0, 327689, 0, 0, 393224, 0, 0, 458761, 0, 0, 524296, 0, 0, 589833, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0 )

[node name="Builder" parent="Level" index="1"]
level_data = ExtResource( 1 )

[node name="Health" parent="Level/Builder/Interactables" index="0" instance=ExtResource( 12 )]
position = Vector2( 136, 121 )

[node name="Health2" parent="Level/Builder/Interactables" index="1" instance=ExtResource( 12 )]
position = Vector2( 152, 169 )

[node name="Health3" parent="Level/Builder/Interactables" index="2" instance=ExtResource( 12 )]
position = Vector2( 136, 201 )

[node name="Health4" parent="Level/Builder/Interactables" index="3" instance=ExtResource( 12 )]
position = Vector2( 152, 105 )

[node name="Entrance" parent="Level" index="2"]
position = Vector2( 184, 24 )
rotation = 0.0

[node name="Exit" parent="Level" index="3"]
position = Vector2( 136, 248 )
rotation = 3.14159

[node name="EndPoint" parent="Level" index="4"]
position = Vector2( 136, 256 )

[node name="StartPoint" parent="Level" index="5"]
position = Vector2( 184, 16 )

[node name="Hero" parent="." instance=ExtResource( 11 )]
position = Vector2( 184, 24 )
starting_anim = "IdleDown"

[node name="StatTracker" parent="Hero" index="5"]
level_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GUI" parent="HUD" instance=ExtResource( 3 )]

[node name="HeroStats" parent="HUD/GUI" index="0"]
level_data = ExtResource( 1 )

[node name="AvailableBlocks" parent="HUD/GUI" index="1"]
level_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="DialogueWindow" parent="Menu" instance=ExtResource( 8 )]
visible = false

[node name="LevelEndWindow" parent="Menu" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="Label" parent="Menu/LevelEndWindow/Background/MarginContainer" index="0"]
text = ""

[node name="Label" parent="Menu/LevelEndWindow/Background/Buttons/RestartButton" index="0"]
margin_left = 2.5
margin_right = 56.5
text = "RESTART"

[node name="Label" parent="Menu/LevelEndWindow/Background/Buttons/MenuButton" index="0"]
text = "MENU"

[node name="PauseWindow" parent="Menu" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
animation_speed = 0.25

[node name="SoundAndMusicToggle" parent="Menu/PauseWindow/Background" index="0" instance=ExtResource( 5 )]
margin_left = 21.5
margin_top = 25.0
margin_right = 59.5
margin_bottom = -23.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="MarginContainer" parent="Menu/PauseWindow/Background" index="1"]
margin_right = 7.62939e-06
margin_bottom = 25.0

[node name="Label" parent="Menu/PauseWindow/Background/MarginContainer" index="0"]
margin_top = 5.0
margin_bottom = 14.0
text = "PAUSE"

[node name="Buttons" parent="Menu/PauseWindow/Background" index="2"]
custom_constants/separation = 5

[node name="Button" parent="Menu/PauseWindow/Background/Buttons" index="0" instance=ExtResource( 9 )]
margin_left = 9.0
margin_right = 41.0

[node name="Label" parent="Menu/PauseWindow/Background/Buttons/Button" index="0"]
text = "Menu"

[node name="RestartButton" parent="Menu/PauseWindow/Background/Buttons" index="1"]
margin_left = 46.0
margin_right = 78.0

[node name="Label" parent="Menu/PauseWindow/Background/Buttons/RestartButton" index="0"]
margin_left = 2.5
margin_right = 56.5
text = "RESTART"

[node name="MenuButton" parent="Menu/PauseWindow/Background/Buttons" index="2"]
margin_left = 83.0
margin_right = 115.0

[node name="Label" parent="Menu/PauseWindow/Background/Buttons/MenuButton" index="0"]
margin_left = 5.5
text = "CLOSE "

[node name="GamePauser" type="Node" parent="Menu/PauseWindow"]
script = ExtResource( 14 )
pause_menu_node = NodePath("..")

[connection signal="level_lost" from="ProgressTracker" to="." method="_on_ProgressTracker_level_lost"]
[connection signal="level_won" from="ProgressTracker" to="." method="_on_ProgressTracker_level_won"]
[connection signal="snapped_to_target" from="CameraPanner" to="." method="_on_CameraPanner_snapped_to_target"]
[connection signal="dialogue_ended" from="Menu/DialogueWindow" to="." method="_on_DialogueWindow_dialogue_ended"]
[connection signal="button_press_finished" from="Menu/LevelEndWindow/Background/Buttons/RestartButton" to="." method="restart_level"]
[connection signal="button_press_finished" from="Menu/LevelEndWindow/Background/Buttons/MenuButton" to="." method="back_to_menu"]
[connection signal="button_press_finished" from="Menu/PauseWindow/Background/Buttons/Button" to="." method="back_to_menu"]
[connection signal="button_press_finished" from="Menu/PauseWindow/Background/Buttons/RestartButton" to="." method="restart_level"]
[connection signal="pressed" from="Menu/PauseWindow/Background/Buttons/MenuButton" to="Menu/PauseWindow" method="fade_out"]
[connection signal="tween_all_completed" from="Menu/PauseWindow/Tween" to="Menu/PauseWindow/GamePauser" method="_on_PauseTween_tween_all_completed"]

[editable path="Level"]
[editable path="Level/TileSelector"]
[editable path="Level/Builder"]
[editable path="Hero"]
[editable path="HUD/GUI"]
[editable path="HUD/GUI/StartButton"]
[editable path="Menu/DialogueWindow"]
[editable path="Menu/LevelEndWindow"]
[editable path="Menu/LevelEndWindow/Background/Buttons/RestartButton"]
[editable path="Menu/LevelEndWindow/Background/Buttons/MenuButton"]
[editable path="Menu/PauseWindow"]
[editable path="Menu/PauseWindow/Background/Buttons/Button"]
[editable path="Menu/PauseWindow/Background/Buttons/RestartButton"]
[editable path="Menu/PauseWindow/Background/Buttons/MenuButton"]
